[tool.poetry]
name = "lesson-27-django"
version = "0.1.0"
description = ""
authors = ["KeitoAV <keito_ekka@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson_27_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg2 = "^2.9.4"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
